feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#46)
* feat: Upgrade to Spring Boot 3.3.11 is performed. Bump dependencies: undertow to 2.3.21.Final, netty to 4.1.125.Final, guava to 32.0.1-jre, commons-lang3 to 3.18.0. 

* chore: java-version parameter is set to 21 according to Spring Boot 3.x requirements.

* feat: change version spring boot to 3.5.11. Also extra related changes are made: JUnit dependency is removed, Jupiter used instead; dependencies management is improved; maven-compiler-plugin version is changed to 3.15.0. DependsOnDatabaseInitialization annotation used to ensure correct order of beans init. JUnit4 tests migrated to Jupiter. Also: clover-maven-plugin is removed.

* build: Project version is set to 1.0.0-SNAPSHOT.

* fix(deps): Unify dependencies: Bump Spring Boot to 3.5.14, Spring Cloud to 2025.0.2, netty to 4.1.132.Final, httpclient5/httpcore5 to 5.4.4/5.3.4, mockito to 5.23.0, bouncycastle to 1.84, org.hibernate.orm:hibernate-core to 6.5.3.Final. Bump atp-auth to 2.0.0, atp-common to 1.0.0.

---------

Co-authored-by: dmch1019 <dmitrii.churbanov@netcracker.com>